fixed z-indexes for <Modal /> and <ModalConfirm />

--- a/src/ui/utils/Modal/ui/Modal.module.scss
+++ b/src/ui/utils/Modal/ui/Modal.module.scss
@@ -22,7 +22,7 @@
 
     max-width: 60%;
 
-    z-index: var(--uikit-utils-z-index);
+    z-index: var(--uikit-utils-modal-z-index);
 
     padding: var(--uikit-padding-s);
 }
