--- a/src/ui/utils/ModalConfirm/ui/ModalConfirm.module.scss
+++ b/src/ui/utils/ModalConfirm/ui/ModalConfirm.module.scss
@@ -23,7 +23,7 @@
 
     max-width: 60%;
 
-    z-index: var(--uikit-utils-z-index);
+    z-index: var(--uikit-utils-modal-z-index);
 
     padding: var(--uikit-padding-s);
 }
